# HelloWorld

./: settings.gradle.kts
HelloFFmpeg/: .gitignore  build.gradle.kts
HelloFFmpeg/ffmpeg_lib/: build.gradle.kts  consumer-rules.pro
HelloFFmpeg/ffmpeg_lib/src/main/cpp/: CMakeLists.txt  android_log.h
HelloFFmpeg/ffmpeg_lib/src/main/cpp/decoder/: audio_codec_jni.cpp  audio_codec_jni.h  ffmpeg_audio_decoder.cpp  ffmpeg_audio_decoder.h
HelloFFmpeg/ffmpeg_lib/src/main/cpp/extractor/: audio_codec_jni.cpp  ffmpeg_audio_extractor.cpp  ffmpeg_audio_extractor.h
HelloFFmpeg/ffmpeg_lib/src/main/cpp/include/libavutil/: ffversion.h
HelloFFmpeg/ffmpeg_lib/src/main/cpp/info/: info_jni.cpp
HelloFFmpeg/ffmpeg_lib/src/main/cpp/retriever/: ffmpeg_retriever.cpp  ffmpeg_retriever.h  retriever_jni.cpp
HelloFFmpeg/src/androidTest/java/xyz/juncat/helloffmpeg/: ExampleInstrumentedTest.kt
HelloFFmpeg/src/main/: AndroidManifest.xml
HelloFFmpeg/src/main/cpp/: CMakeLists.txt  native-lib.cpp
HelloFFmpeg/src/main/cpp/ffmpeg/include/libavutil/: ffversion.h
HelloFFmpeg/src/main/java/xyz/juncat/helloffmpeg/: MainActivity.kt
HelloFFmpeg/src/test/java/xyz/juncat/helloffmpeg/: ExampleUnitTest.kt
HelloFlutter/: .gitignore  build.gradle.kts
HelloFlutter/hello_flutter/: .metadata  README.md  pubspec.yaml
HelloFlutter/hello_flutter/lib/: dependencies_test_page.dart  main.dart
HelloFlutter/src/androidTest/java/xyz/juncat/helloflutter/: ExampleInstrumentedTest.kt
HelloFlutter/src/main/: AndroidManifest.xml
HelloFlutter/src/main/java/xyz/juncat/helloflutter/: MainActivity.kt
HelloFlutter/src/main/res/layout/: activity_main.xml
HelloFlutter/src/main/res/values/: strings.xml  themes.xml
HelloFlutter/src/main/res/values-night/: themes.xml
HelloFlutter/src/test/java/xyz/juncat/helloflutter/: ExampleUnitTest.kt
HelloJNI/: .gitignore  build.gradle.kts
HelloJNI/lib/: build.gradle.kts
HelloJNI/lib/src/main/cpp/: CMakeLists.txt  access_field.cpp  access_java.cpp  dynamic_load.cpp  jni_exception.cpp  jni_thread.cpp  native-lib.cpp  reference_type.cpp
HelloJNI/lib/src/main/cpp/base/: jvm_holder.cpp  jvm_holder.h  logutil.h
HelloJNI/src/androidTest/java/xyz/juncat/hellojni/: ExampleInstrumentedTest.kt
HelloJNI/src/main/: AndroidManifest.xml
HelloJNI/src/main/cpp/: CMakeLists.txt  native-lib.cpp
HelloJNI/src/main/java/xyz/juncat/hellojni/: MainActivity.kt
HelloJNI/src/main/res/layout/: activity_main.xml
HelloJNI/src/main/res/values/: themes.xml
HelloJNI/src/main/res/values-night/: themes.xml
HelloJNI/src/test/java/xyz/juncat/hellojni/: ExampleUnitTest.kt
HelloKotlin/src/: Clazz.kt  Collections.kt  DataClazz.kt  Delegation.kt  Enum.kt  Functions.kt  InlineClazz.kt  Interfaces.kt  Lambda.kt  Loop.kt  Main.kt  NestedClazz.kt  Number.kt  Object.kt  OverrideKt.kt  Properties.kt  Proxy.kt  Ranges.kt  SealedClazz.kt  When.kt
HelloOpenGLES/: .gitignore  README.md  build.gradle.kts
HelloOpenGLES/src/androidTest/java/com/jianjun/helloopengles/: ExampleInstrumentedTest.kt
HelloOpenGLES/src/main/: AndroidManifest.xml
HelloOpenGLES/src/main/res/drawable/: ic_launcher_foreground.xml
HelloOpenGLES/src/main/res/layout/: activity_clip.xml  activity_main.xml  activity_triangle.xml
HelloOpenGLES/src/main/res/raw/: simple_fragment_shader.glsl  simple_vertex_shader.glsl  texture_vertex_shader.glsl
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml  themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
helloaidl/: build.gradle.kts
helloaidl/libaidl/: build.gradle.kts
(+47 files in other folders)
